Fix runtime issues (findfirst) and missing class names for String and Supplier